@@ -1,15 +1,18 @@
-# Last Change: Tue Aug 22 10:00 PM 2006 J
+# Last Change: Mon Aug 28 10:00 PM 2006 J
 
-Things which must be implemented for a 1.0 version:
-    - test for various length and model size.
+Things which must be implemented for a 1.0 version (in importante order)
+    - test for various length and model size 
     - a small help/tutorial
+    - be complient with scipy module dev guidelines (DEVELOPERS.TXT)
+    - On-line EM
     - use scipy.cluster.vq instead of custom kmeans algo (find
-    a way to get label from vq.kmeans)
+    a way to get label from vq.kmeans: depends on scipy changes)
+    - C implementation of Gaussian densities at least (partially done,
+    but need integration into distutils + portable way of detecting/
+    loading shared library with ctypes)
 
 Things which would be nice:
-    - C implementation of Gaussian densities at least.
     - Integrate libem (libem should be modified so
     that it would be easy to package and distribute)
-    - On-line EM
     - Other initialization schemes
     - Other mixture models
