@@ -5,7 +5,7 @@ PYREX	= python2.4-pyrexc
 
 PYTHONINC	= -I/usr/include/python2.4
 NUMPYINC	= -I/usr/lib/python2.4/site-packages/numpy/core/include
-OPTIMS		= -O2 -ffast-math -march=pentium4
+OPTIMS		= -O3 -funroll-all-loops -ffast-math -march=pentium4
 WARN		= -W -Wall
 
 CFLAGS	= $(PYTHONINC) $(NUMPYINC) $(OPTIMS) $(WARN)
